# jobagent

./: .env.example  .gitignore  CODEX_WORKFLOW.md  PROJECT_PLAN.md  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/baguwen/: SOURCES.md  concurrency.md  database.md  git_linux.md  llm_agent.md  llm_rag.md  ml_basics.md  network.md  os.md  python.md  system_design.md
examples/: jd_agent_engineer.txt
plans/: 2026-06-10.md  2026-06-11.md  2026-06-12.md  2026-06-13.md  2026-06-14.md  2026-06-15.md  2026-06-16.md  2026-06-17.md  2026-06-18.md  2026-06-19.md  2026-06-20.md  2026-06-21.md  2026-06-22_to_30.md  INDEX.md
scripts/: build_index.py
src/: cli.py  llm.py
src/agent/: graph.py  nodes.py  state.py
src/eval/: eval_set.json  retrieval_eval.py
src/prompts/: plan_prompt.md
src/rag/: embed.py  ingest.py  rerank.py  retriever.py  store.py
src/schemas/: plan.py
src/tools/: web_search.py
tests/: conftest.py  test_graph.py  test_ingest.py  test_live_smoke.py  test_nodes.py  test_retrieval_eval.py  test_retriever.py  test_web_search.py
