[project]
name = "jobagent"
version = "0.1.0"
description = "AI Agent 面试备战计划生成器"
requires-python = ">=3.11"
dependencies = [
    # Orchestration
    "langgraph>=0.2.50,<0.3",
    "langchain-core>=0.3.0,<0.4",
    "langchain-openai>=0.2.0,<0.3",
    "langsmith>=0.1.140",
    # LLM / API clients
    "openai>=1.50.0",
    "tavily-python>=0.5.0,<0.6",
    # RAG / Vector store
    "chromadb>=0.5.5,<0.6",
    "sentence-transformers>=3.0.0,<4.0",
    "torch>=2.1.0",
    # Schemas / config
    "pydantic>=2.7,<3.0",
    "python-dotenv>=1.0.1",
    # UI
    "click>=8.1.7",
    "rich>=13.7.0",
    "streamlit>=1.36.0",
]

[project.scripts]
jobagent = "src.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "live: tests that call real external services and require RUN_LIVE_TESTS=1",
]
